--- a/mellow/Cargo.toml
+++ b/mellow/Cargo.toml
@@ -7,16 +7,16 @@ edition = "2021"
 
 [dependencies]
 hex = "0.4.3"
-hyper = { version = "1", features = ["full"] }
-tokio = { version = "1", features = ["full"] }
-serde = { version = "1.0.192", features = ["derive"] }
+hyper = { version = "1.0.1", features = ["full"] }
+tokio = { version = "1.34.0", features = ["full"] }
+serde = { version = "1.0.193", features = ["derive"] }
 reqwest = { version = "0.11.22", features = ["json"] }
 postgrest = "1.6.0"
 once_cell = "1.18.0"
 serde_repr = "0.1.17"
 serde_json = "1.0.108"
-hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
-ed25519-dalek = "2.0.0"
+hyper-util = { git = "https://github.com/hyperium/hyper-util.git", features = ["tokio"] }
+ed25519-dalek = "2.1.0"
 mellow_macros = { path = "../macros" }
-http-body-util = "0.1"
+http-body-util = "0.1.0"
 async-recursion = "1.0.5"
