--- a/mellow/Cargo.toml
+++ b/mellow/Cargo.toml
@@ -23,6 +23,7 @@ postgrest = "1.6.0"
 once_cell = "1.18.0"
 serde_repr = "0.1.17"
 serde_json = "1.0.108"
+derive_more = "0.99.17"
 ed25519-dalek = "2.1.0"
 simple_logger = "4.3.0"
 mellow_macros = { path = "../macros" }
