--- a/mellow/Cargo.toml
+++ b/mellow/Cargo.toml
@@ -15,6 +15,8 @@ rust-version = "1.73"
 [dependencies]
 hex = "0.4.3"
 log = "0.4.20"
+hmac = "0.12.1"
+sha2 = "0.10.8"
 tokio = { version = "1.34.0", features = ["full"] }
 serde = { version = "1.0.193", features = ["derive"] }
 chrono = "0.4.31"
