--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = "2.0.39"
-quote = "1.0.33"
-proc-macro2 = "1.0.70"
+syn = "2.0.46"
+quote = "1.0.35"
+darling = "0.20.3"
+proc-macro2 = "1.0.74"
