--- a/mellow/Cargo.toml
+++ b/mellow/Cargo.toml
@@ -20,14 +20,19 @@ sha2 = "0.10.8"
 tokio = { version = "1.34.0", features = ["full"] }
 serde = { version = "1.0.193", features = ["derive"] }
 chrono = "0.4.31"
+tracing = "0.1.40"
 reqwest = { version = "0.11.23", features = ["json"] }
 actix-web = "4.4.0"
 postgrest = "1.6.0"
 once_cell = "1.18.0"
+thiserror = "1.0.57"
 serde_repr = "0.1.17"
 serde_json = "1.0.108"
 derive_more = "0.99.17"
+futures-util = "0.3.30"
 ed25519-dalek = "2.1.0"
 simple_logger = "4.3.0"
+tracing-error = "0.2.0"
 mellow_macros = { path = "../macros" }
 async-recursion = "1.0.5"
+twilight-gateway = "0.15.4"
