--- a/mellow/Cargo.toml
+++ b/mellow/Cargo.toml
@@ -19,7 +19,7 @@ hmac = "0.12.1"
 sha2 = "0.10.8"
 tokio = { version = "1.34.0", features = ["full"] }
 serde = { version = "1.0.193", features = ["derive"] }
-chrono = "0.4.31"
+chrono = { version = "0.4.31", features = ["serde"] }
 tracing = "0.1.40"
 reqwest = { version = "0.11.23", features = ["json"] }
 actix-web = "4.4.0"
