--- a/mellow/Cargo.toml
+++ b/mellow/Cargo.toml
@@ -17,18 +17,19 @@ hex = "0.4.3"
 log = "0.4.20"
 hmac = "0.12.1"
 sha2 = "0.10.8"
-tokio = { version = "1.34.0", features = ["full"] }
-serde = { version = "1.0.193", features = ["derive"] }
-chrono = { version = "0.4.31", features = ["serde"] }
+moka = { version = "0.12.5", features = ["future"] }
+tokio = { version = "1.36.0", features = ["full"] }
+serde = { version = "1.0.197", features = ["derive"] }
+chrono = { version = "0.4.37", features = ["serde"] }
 tracing = "0.1.40"
 futures = "0.3.30"
 reqwest = { version = "0.11.27", features = ["json"] }
 actix-web = "4.5.1"
 postgrest = "1.6.0"
-once_cell = "1.18.0"
-thiserror = "1.0.57"
-serde_repr = "0.1.17"
-serde_json = "1.0.108"
+once_cell = "1.19.0"
+thiserror = "1.0.58"
+serde_repr = "0.1.18"
+serde_json = "1.0.115"
 derive_more = "0.99.17"
 futures-util = "0.3.30"
 tokio-stream = "0.1.15"
@@ -36,6 +37,6 @@ ed25519-dalek = "2.1.0"
 simple_logger = "4.3.0"
 tracing-error = "0.2.0"
 mellow_macros = { path = "../macros" }
-async-recursion = "1.0.5"
 twilight-model = "0.15.4"
+async-recursion = "1.0.5"
 twilight-gateway = "0.15.4"
