--- a/mellow/Cargo.toml
+++ b/mellow/Cargo.toml
@@ -29,6 +29,7 @@ actix-web = "4.5.1"
 postgrest = "1.6.0"
 once_cell = "1.19.0"
 thiserror = "1.0.58"
+tokio-util = "0.7.10"
 serde_repr = "0.1.18"
 serde_json = "1.0.115"
 derive_more = "0.99.17"
