--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install Rust Nightly
+      run: rustup toolchain install nightly --profile minimal
+    - name: Set-up Rust Cache
+      uses: Swatinem/rust-cache@v2
     - name: Build
       run: cargo build --release --verbose
     - name: Upload
