--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -5,7 +5,15 @@ on:
     types: [published]
 
 env:
+  API_KEY: ${{secrets.API_KEY}}
+  RUST_LOG: ${{env.RUST_LOG}}
+  DISCORD_TOKEN: ${{secrets.DISCORD_TOKEN}}
+  DISCORD_APP_ID: ${{env.DISCORD_APP_ID}}
+  ABSOLUTESOLVER: ${{secrets.ABSOLUTESOLVER}}
   CARGO_TERM_COLOR: always
+  SUPABASE_API_KEY: ${{secrets.SUPABASE_API_KEY}}
+  DISCORD_PUBLIC_KEY: ${{env.DISCORD_APP_PUBLIC_KEY}}
+  ROBLOX_OPEN_CLOUD_KEY: ${{secrets.ROBLOX_OPEN_CLOUD_KEY}}
 
 jobs:
   build:
