--- a/mellow/Cargo.toml
+++ b/mellow/Cargo.toml
@@ -14,7 +14,6 @@ rust-version = "1.73"
 
 [dependencies]
 hex = "0.4.3"
-log = "0.4.21"
 hmac = "0.12.1"
 sha2 = "0.10.8"
 uuid = { version = "1.8.0", features = ["serde"] }
@@ -26,21 +25,26 @@ tracing = "0.1.40"
 futures = "0.3.30"
 # postgrest is blocking upgrade to latest version :(
 reqwest = { version = "0.11.27", features = ["json"] }
+dashmap = { version = "5.5.3" }
+mimalloc = "0.1.39"
 actix-web = "4.5.1"
 postgrest = "1.6.0"
 once_cell = "1.19.0"
 thiserror = "1.0.58"
+simd-json = "0.13.9"
 tokio-util = "0.7.10"
 serde_repr = "0.1.18"
 serde_json = "1.0.115"
+tracing-log = "0.2.0"
+signal-hook = "0.3.17"
 derive_more = "0.99.17"
 futures-util = "0.3.30"
-tokio-stream = "0.1.15"
-ed25519-dalek = "2.1.1"
-simple_logger = "4.3.3"
 tracing-error = "0.2.0"
 mellow_macros = { path = "../macros" }
+twilight-http = { version = "0.15.4", features = ["simd-json"] }
+twilight-util = { version = "0.15.4", features = ["builder"] }
 twilight-model = "0.15.4"
 async-recursion = "1.1.0"
-percent-encoding = "2.3.1"
-twilight-gateway = "0.15.4"
+twilight-gateway = { version = "0.15.4", features = ["simd-json"] }
+twilight-validate = "0.15.3"
+tracing-subscriber = "0.3.18"
