--- a/mellow/Cargo.toml
+++ b/mellow/Cargo.toml
@@ -31,7 +31,7 @@ actix-web = "4.5.1"
 postgrest = "1.6.0"
 once_cell = "1.19.0"
 thiserror = "1.0.58"
-simd-json = "0.13.9"
+simd-json = { version = "0.13.9", features = ["runtime-detection"] }
 tokio-util = "0.7.10"
 serde_repr = "0.1.18"
 serde_json = "1.0.115"
