--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+	"rust-analyzer.check.command": "clippy",
 	"rust-analyzer.linkedProjects": ["./Cargo.toml"],
 	"rust-analyzer.showUnlinkedFileNotification": false
 }
