--- a/crates/mellow/Cargo.toml
+++ b/crates/mellow/Cargo.toml
@@ -31,7 +31,7 @@ actix-web = "4.5.1"
 once_cell = "1.19.0"
 thiserror = "1.0.59"
 simd-json = "0.13.10"
-postgrest = { path = "../../../postgrest-rs", features = ["simd-json"] }
+postgrest = { git = "https://github.com/hakusoda/postgrest-rs.git", tag = "v0.1.1", features = ["simd-json"] }
 url-escape = "0.1.1"
 tokio-util = "0.7.11"
 serde_repr = "0.1.19"
