--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,8 @@ debug-assertions = true
 [profile.release]
 lto = true
 strip = true
-panic = "unwind"
-opt-level = "s"
+panic = "abort"
+opt-level = 3
+incremental = false
 codegen-units = 1
 debug-assertions = false
