--- a/crates/mellow/Cargo.toml
+++ b/crates/mellow/Cargo.toml
@@ -37,15 +37,14 @@ tokio-util = "0.7.11"
 serde_repr = "0.1.19"
 serde_json = "1.0.117"
 tracing-log = "0.2.0"
-signal-hook = "0.3.17"
 derive_more = "0.99.18"
 futures-util = "0.3.30"
 tracing-error = "0.2.0"
 mellow_macros = { path = "../mellow_macros" }
-twilight-http = { version = "0.15.4", features = ["simd-json"] }
-twilight-util = { version = "0.15.4", features = ["builder"] }
-twilight-model = "0.15.4"
+twilight-http = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["simd-json"] }
+twilight-util = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["builder"] }
+twilight-model = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028" }
 async-recursion = "1.1.1"
-twilight-gateway = { version = "0.15.4", features = ["simd-json"] }
+twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["simd-json"] }
 twilight-validate = "0.15.3"
 tracing-subscriber = "0.3.18"
