--- a/crates/mellow/Cargo.toml
+++ b/crates/mellow/Cargo.toml
@@ -14,10 +14,10 @@ rust-version.workspace = true
 
 [dependencies]
 hex = "0.4.3"
-url = "2.5.1"
+url = "2.5.2"
 hmac = "0.12.1"
 sha2 = "0.10.8"
-uuid = { version = "1.8.0", features = ["serde"] }
+uuid = { version = "1.9.1", features = ["serde"] }
 moka = { version = "0.12.7", features = ["future"] }
 sqlx = { version = "0.7.4", features = ["uuid", "json", "chrono", "macros", "postgres", "tls-native-tls", "rust_decimal", "runtime-tokio"] }
 tokio = { version = "1.38.0", features = ["full"] }
@@ -25,9 +25,9 @@ serde = { version = "1.0.203", features = ["derive"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 tracing = "0.1.40"
 futures = "0.3.30"
-dashmap = { version = "5.5.3", features = ["inline"] }
+dashmap = { version = "6.0.1", features = ["inline"] }
 reqwest = { version = "0.12.5", features = ["json"] }
-actix-web = "4.7.0"
+actix-web = "4.8.0"
 once_cell = "1.19.0"
 thiserror = "1.0.61"
 simd-json = "0.13.10"
@@ -35,11 +35,11 @@ postgrest = { git = "https://github.com/hakusoda/postgrest-rs.git", tag = "v0.1.
 url-escape = "0.1.1"
 tokio-util = "0.7.11"
 serde_repr = "0.1.19"
-serde_json = "1.0.117"
+serde_json = "1.0.118"
 tracing-log = "0.2.0"
 derive_more = "0.99.18"
+parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
 futures-util = "0.3.30"
-tracing-error = "0.2.0"
 mellow_macros = { path = "../mellow_macros" }
 twilight-http = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["simd-json"] }
 twilight-util = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["builder"] }
