the big rewrite

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,26 @@ homepage = "https://github.com/hakusoda/mellow"
 repository = "https://github.com/hakusoda/mellow"
 rust-version = "1.79"
 
+[workspace.dependencies]
+async-once-cell = "0.5.3"
+chrono = { version = "0.4.38", features = ["serde"] }
+dashmap = { version = "6.0.1", features = ["inline"] }
+sqlx = { version = "0.7.4", features = ["uuid", "json", "chrono", "macros", "postgres", "tls-native-tls", "rust_decimal", "runtime-tokio"] }
+tokio = { version = "1.38.0", features = ["full"] }
+reqwest = { version = "0.12.5", features = ["json"] }
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.120"
+serde_repr = "0.1.19"
+simd-json = "0.13.10"
+futures = "0.3.30"
+thiserror = "1.0.61"
+once_cell = "1.19.0"
+tracing = "0.1.40"
+twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["simd-json"] }
+twilight-http = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["simd-json"] }
+twilight-model = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028" }
+twilight-util = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["builder"] }
+
 [profile.dev]
 lto = false
 debug = true
