--- a/crates/mellow/Cargo.toml
+++ b/crates/mellow/Cargo.toml
@@ -26,6 +26,7 @@ mellow_macros.path = "../mellow_macros"
 mellow_models.path = "../mellow_models"
 mellow_util.path = "../mellow_util"
 once_cell = "1.19.0"
+rand.workspace = true
 reqwest.workspace = true
 sha2 = "0.10.8"
 serde.workspace = true
