--- a/crates/mellow_util/Cargo.toml
+++ b/crates/mellow_util/Cargo.toml
@@ -17,7 +17,7 @@ async-once-cell.workspace = true
 chrono.workspace = true
 http = "1.1.0"
 once_cell.workspace = true
-rand = "0.8.5"
+rand.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 sqlx.workspace = true
